# audioforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns
src/audioforge/: __init__.py  __main__.py  app.py  logging_config.py
src/audioforge/core/: converter.py  ffmpeg.py  formats.py  metadata.py  validator.py
src/audioforge/platform/: compat.py
src/audioforge/ui/: file_panel.py  metadata_panel.py  progress_panel.py  settings_panel.py
tests/: conftest.py  test_converter.py  test_ffmpeg_progress.py  test_formats.py  test_validator.py
