[project]
name = "audioforge"
version = "0.1.0"
description = "Cross-platform audio file converter with chapter support"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0",
    "Pillow>=10.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
audioforge = "audioforge.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring ffmpeg (deselect with '-m \"not integration\"')",
]
